<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_toggle_theme"
            android:title="@string/action_toggle_themes"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_favorite"
            android:title="@string/action_favorites"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_staging_count"
            android:title="@string/staging_database_count"
            app:showAsAction="never"/>

    <item
            android:id="@+id/network_status"
            android:icon="@drawable/ic_network_status_none"
            android:title=""
            app:showAsAction="ifRoom"/>

</menu>